# claude-draw-demo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  code_generated.md  cpp_architecture.md  cpp_task_report.md  cpp_tasks.md  pyproject.toml  task14_no_batch.md  task_1_plan.md  task_overview.md  task_status_update.md
.github/workflows/: cpp-ci-simplified.yml  cpp-ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  tasks.json
History_step_docs/: setup-verification.md  step-done-notes.md
benchmarks/: README.md  __init__.py  benchmark_containers.py  benchmark_serialization.py  benchmark_shape_creation.py  benchmark_utils.py  run_benchmarks.py
benchmarks/benchmark_results/: combined_20250720_124649.json  combined_20250720_161753.json  containers_20250720_124649.json  containers_20250720_161753.json  serialization_20250720_161717.json  serialization_20250720_161753.json  shape_creation_20250720_124649.json  shape_creation_20250720_161753.json
cpp/: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTAINER_OPTIMIZATION.md  CONTAINER_OPTIMIZATION_REPORT.md  INFRASTRUCTURE_SUMMARY.md  MAKEFILE_GUIDE.md  Makefile  README.md  build.sh  shapes_implementation_summary.md  test_batch_fix.py  test_bindings.py
cpp/.github/workflows/: coverage.yml
cpp/benchmarks/: CMakeLists.txt  batch_performance_report.py  bench_containers.cpp  bench_core_types.cpp  bench_main.cpp  bench_python_comparison.py  bench_shapes.cpp  bench_simd.cpp  bench_utils.h  container_benchmark_report.md  final_batch_report.md  quick_shape_report.py  serialization_benchmark.cpp  shape_performance_report.py  simple_performance_report.py
cpp/docs/: memory_management_summary.md
cpp/include/claude_draw/batch/: batch_operations.h
cpp/include/claude_draw/containers/: bulk_operations.h  cow_container.h  drawing.h  group.h  incremental_bounds.h  layer.h  parallel_visitor.h  soa_container.h  spatial_index.h
cpp/include/claude_draw/core/: bounding_box.h  color.h  point2d.h  simd.h  transform2d.h
cpp/include/claude_draw/memory/: arena_allocator.h  memory_profiler.h  mmap_file.h  object_pool.h  object_recycler.h  type_pools.h
cpp/include/claude_draw/serialization/: binary_deserializer.h  binary_format.h  binary_serializer.h  compressed_serializer.h  compression.h  format_changes.h  memory_mapped_file.h  serialization.h  serialization_benchmarks.h  shape_serializers.h  simple_serializers.h  streaming.h  validated_io.h  validation.h  version_migration.h  zero_copy.h
cpp/include/claude_draw/shapes/: circle.h  circle_optimized.h  ellipse.h  ellipse_optimized.h  line.h  line_optimized.h  rectangle.h  rectangle_optimized.h  shape_base.h  shape_base_optimized.h  shape_batch_ops.h  shape_validation.h  unchecked_shapes.h
cpp/scripts/: build-debug.sh  build-release.sh  coverage.sh
cpp/src/: CMakeLists.txt
cpp/src/bindings/: CMakeLists.txt  batch_ops.cpp  core_types.cpp  module.cpp
cpp/src/core/: bounding_box.cpp  color.cpp  placeholder.cpp  point2d.cpp  simd.cpp  transform2d.cpp
cpp/src/memory/: memory_profiler.cpp  mmap_file.cpp
cpp/src/shapes/: placeholder.cpp  shape_batch_ops.cpp
cpp/tests/: CMakeLists.txt  test_main.cpp  test_utils.h
cpp/tests/batch/: test_batch_operations.cpp
cpp/tests/bindings/: test_conversions.cpp
cpp/tests/containers/: test_bulk_operations.cpp  test_container_stress.cpp  test_cow_container.cpp  test_incremental_bounds.cpp  test_parallel_visitor.cpp  test_parallel_visitor_performance.cpp  test_soa_container.cpp  test_soa_container_advanced.cpp  test_spatial_index.cpp  test_spatial_index_performance.cpp
cpp/tests/core/: test_bounding_box.cpp  test_color.cpp  test_point2d.cpp  test_simd.cpp  test_transform2d.cpp
cpp/tests/integration/: test_integration.cpp
cpp/tests/memory/: test_arena_allocator.cpp  test_memory_profiler.cpp  test_mmap_file.cpp  test_object_pool.cpp  test_object_recycler.cpp
cpp/tests/python/: test_batch_operations.py  test_integration.py  test_type_conversions.py
cpp/tests/serialization/: test_benchmarks.cpp  test_binary_format.cpp  test_binary_serializer.cpp  test_compatibility.cpp  test_compression.cpp  test_shape_serialization.cpp  test_simple_serialization.cpp  test_streaming.cpp  test_streaming_simple.cpp  test_validation.cpp  test_zero_copy.cpp
cpp/tests/shapes/: test_circle.cpp  test_circle_optimized.cpp  test_ellipse_optimized.cpp  test_line_optimized.cpp  test_rectangle_optimized.cpp  test_shape_batch_ops.cpp  test_shape_integration.cpp  test_shape_layout.cpp  test_shape_validation.cpp  test_simd_bounds.cpp
docs/: architecture.md
examples/: hello_world.py  house_with_trees.py  simple_svg_export.py
src/claude_draw/: __init__.py  base.py  containers.py  core.py  factories.py  protocols.py  renderers.py  serialization.py  shapes.py  visitors.py
src/claude_draw/models/: __init__.py  base.py  bounding_box.py  color.py  exceptions.py  point.py  transform.py  validators.py
tests/: test_base.py  test_containers.py  test_core.py  test_factories.py  test_protocols.py  test_serialization.py  test_shapes.py  test_visitors.py
tests/models/: __init__.py  test_base.py  test_bounding_box.py  test_color.py  test_point.py  test_transform.py  test_validators.py
